@@ -1,3 +1,8 @@
+2011-05-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-47
+	* Display datasets and unassigned input tags of selected path
+	* in right lower panel tabs. (bug/feature 82524).
+	
 2011-05-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-46
 	* Fixes a little bug of "import all" option.
